# llm_interface

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llm_interface/: __init__.py  config.py
src/llm_interface/cli/: __init__.py  main.py
src/llm_interface/config/: __init__.py  api_keys.py  prompt_manager.py  prompts.json
src/llm_interface/extensions/: __init__.py  ssh.py
src/llm_interface/llm/: __init__.py  base.py  ollama.py  ollama_session.py  ollama_utils.py  research_capabilities.py
src/llm_interface/research/: __init__.py  document.py  react.py  retrieval.py  web.py
src/llm_interface/session/: __init__.py  manager.py  memory.py
src/llm_interface/tools/: __init__.py  base.py  list_tools.py  video_tools.py  web_tools.py
src/llm_interface/utils/: __init__.py  helpers.py
tests/: test_llm.py
