[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_interface"
version = "0.1.0"
description = "Interface for locally hosted LLMs with RAG capabilities"
readme = "README.md"
authors = [{name = "Tim Hosking"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "click>=8.0.0",
    "duckduckgo-search>=2.0.0",
    "beautifulsoup4>=4.10.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.scripts]
llm-cli = "llm_interface.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/Munger/llm_interface"
"Bug Tracker" = "https://github.com/Munger/llm_interface/issues"
